@@ -23,7 +23,7 @@ public class Information_Interface {
         System.out.println("Recuperando informazioni dal database...");
         DB.generateExecute("I",1, personale.getID());
         List<Employee> impiegato = DB.getResult_list();
-        return impiegato.getFirst();
+        return impiegato.get(0);
     }
     public void modifica_informazioni(int ID, String nome, String cognome){
         if(MC.modifica_informazioni(ID, nome, cognome, "I")){
